--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3"
+  },
+  "dependencies": {
+    "apollo-server": "^3.9.0",
+    "graphql": "^16.5.0"
   }
 }
