--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pretty-quick": "^3.1.3"
   },
   "dependencies": {
-    "apollo-server": "^3.9.0",
+    "apollo-server-express": "^3.9.0",
+    "express": "^4.18.1",
     "graphql": "^16.5.0"
   }
 }
